--- a/suite/locales/en-US/chrome/mailnews/compose/composeMsgs.properties
+++ b/suite/locales/en-US/chrome/mailnews/compose/composeMsgs.properties
@@ -267,3 +267,20 @@ promptToSaveTemplateLocally=Your template was not saved to your templates folder
 ## occur if network is down and filesystem problems are present such as disk
 ## full, permission issues or hardware failure.
 saveToLocalFoldersFailed=Unable to save your message to local folders. Possibly out of file storage space.
+
+## LOCALIZATION NOTE(blockedAllowResource): %S is the URL to load.
+blockedAllowResource=Unblock %S
+## LOCALIZATION NOTE (blockedContentMessage): Semi-colon list of plural forms.
+## See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## %S will be replaced by brandShortName.
+## Files must be unblocked individually, therefore the plural form reads:
+## Unblocking a file (one of several) will include it (that one file) in your sent message.
+## In other words:
+## Unblocking one/several file(s) will include it/them in your message.
+blockedContentMessage=%S has blocked a file from loading into this message. Unblocking the file will include it in your sent message.;%S has blocked some files from loading into this message. Unblocking a file will include it in your sent message.
+
+## LOCALIZATION NOTE (blockedContentPrefLabel, blockedContentPrefAccesskey):
+## Same content as (blockedContentPrefLabel, blockedContentPrefAccesskey)
+## in mail directory. SeaMonkey does only use Options and not Preferences.
+blockedContentPrefLabel=Options
+blockedContentPrefAccesskey=O
