--- a/mail/locales/en-US/chrome/messenger/activity.properties
+++ b/mail/locales/en-US/chrome/messenger/activity.properties
@@ -45,8 +45,11 @@ autosyncEventStatusTextNoMsgs=No messages downloaded
 # LOCALIZATION NOTE (autosyncContextDisplayText): %S will be replaced by the account name
 autosyncContextDisplayText=Synchronizing: %S
 
-# LOCALIZATION NOTE (pop3ProcessDisplayText): %S will be replaced by the account name
-pop3EventStartDisplayText=Checking %S for new messages
+# LOCALIZATION NOTE (pop3EventStartDisplayText2): Do not translate the words "%1$S" and "%2$S" below.
+# Place the word %1$S in your translation where the name of the account being checked for new messages should appear.
+# Place the word %2$S in your translation where the name of the folder being checked for new messages should appear.
+# EXAMPLE: George's account: Checking Inbox for new messages…
+pop3EventStartDisplayText2=%1$S: Checking %2$S for new messages…
 # LOCALIZATION NOTE (pop3EventDisplayText): %S will be replaced by the account name
 pop3EventDisplayText=%S is up to date
 # LOCALIZATION NOTE (pop3EventStatusText): #1 will be replaced by total number of downloaded messages
